update index routes
